[gd_scene load_steps=32 format=3 uid="uid://bsovxpjhi3m68"]

[ext_resource type="Script" path="res://Menu/Scripts/Menu.gd" id="1_mw1oq"]
[ext_resource type="Script" path="res://Menu/Buttons/Scripts/PlayButton.gd" id="2_2rl5b"]
[ext_resource type="Script" path="res://Menu/Buttons/Scripts/OptionsButton.gd" id="3_8sauk"]
[ext_resource type="Texture2D" uid="uid://bnro5q2aigqqq" path="res://Menu/Buttons/Sprites/Blank-Menu-Button.png" id="3_w2yms"]
[ext_resource type="Texture2D" uid="uid://xmc68xj4honv" path="res://Menu/Buttons/Sprites/Option-Button.png" id="4_ws4vs"]
[ext_resource type="Script" path="res://Menu/Buttons/Scripts/QuitButton.gd" id="4_xjse2"]
[ext_resource type="Texture2D" uid="uid://dsqcms5p46uo6" path="res://Menu/Sprites/Menu-Particles.png" id="6_inpgq"]
[ext_resource type="PackedScene" uid="uid://bfic21tqcvxhy" path="res://Menu/Buttons/level_button.tscn" id="6_q0x1v"]
[ext_resource type="Texture2D" uid="uid://diab47k5dt1eh" path="res://General sprites/4b0td3wb.bmp" id="6_xghxx"]
[ext_resource type="AudioStream" uid="uid://dakxxt3di1udr" path="res://Audio/Music/Tutorial.ogg" id="7_7vw0p"]
[ext_resource type="AudioStream" uid="uid://piwbmn4te7qg" path="res://Audio/Music/Vergence.ogg" id="7_8cgm1"]
[ext_resource type="FontFile" uid="uid://bnhr6cn2faw3h" path="res://Fonts/UASQUARE.TTF" id="9_fe1s5"]
[ext_resource type="Texture2D" uid="uid://dbjye8ulhplnb" path="res://Menu/Buttons/Sprites/Volume-Slider-Grabber.png" id="9_jn30u"]
[ext_resource type="Texture2D" uid="uid://bogjnk23uch81" path="res://Menu/Buttons/Sprites/Credits-Button.png" id="9_occwv"]
[ext_resource type="Script" path="res://Menu/Buttons/Scripts/CreditsButton.gd" id="10_ihhec"]
[ext_resource type="Script" path="res://Menu/Scripts/GoBack.gd" id="10_jysmn"]
[ext_resource type="Script" path="res://Menu/Scripts/HowToPlay.gd" id="10_l0rwp"]
[ext_resource type="LabelSettings" uid="uid://c6rwunq8vx24b" path="res://Fonts/MiniLabelSettings.tres" id="11_63nhc"]
[ext_resource type="LabelSettings" uid="uid://j5jf5s3hx1os" path="res://Fonts/SettingsLabelSettings.tres" id="11_fstwx"]
[ext_resource type="LabelSettings" uid="uid://bqg16poqvchfh" path="res://Fonts/LevelButtonName.tres" id="12_mv2cu"]
[ext_resource type="LabelSettings" uid="uid://o0heu2j8tid6" path="res://Fonts/CreditLabelSettings.tres" id="14_ebgxt"]
[ext_resource type="PackedScene" uid="uid://cvoevxhupkav1" path="res://Menu/Buttons/BoolButton.tscn" id="14_j2f7x"]
[ext_resource type="AudioStream" uid="uid://cqv3hguyttcyk" path="res://Audio/Music/MainMenu2.ogg" id="17_g5fc3"]
[ext_resource type="Script" path="res://Menu/Scripts/MusicPlayer.gd" id="17_yf7x2"]
[ext_resource type="PackedScene" uid="uid://0vycpv6khhkl" path="res://Menu/Logo.tscn" id="21_qrt8e"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0urtc"]
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="LabelSettings" id="LabelSettings_a2a27"]
font = ExtResource("9_fe1s5")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_5ccmj"]
font = ExtResource("9_fe1s5")
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_8iohv"]
font = ExtResource("9_fe1s5")
font_size = 50
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_cvktx"]
color = Color(0.0431373, 0.0431373, 0.0431373, 1)
thickness = 10

[sub_resource type="StyleBoxLine" id="StyleBoxLine_seexa"]
color = Color(0.027, 0.106, 0.043, 1)
thickness = 10

[node name="Menu" type="Node2D"]
script = ExtResource("1_mw1oq")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0431373, 0.0431373, 0.0431373, 1)

[node name="Particles" type="Node2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="Particles"]
material = SubResource("CanvasItemMaterial_0urtc")
position = Vector2(576, 640)
amount = 12
speed_scale = 0.4
texture = ExtResource("6_inpgq")
emission_shape = 3
emission_rect_extents = Vector2(512, 0)
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="CPUParticles2D2" type="CPUParticles2D" parent="Particles"]
material = SubResource("CanvasItemMaterial_0urtc")
position = Vector2(576, 0)
amount = 12
speed_scale = 0.4
texture = ExtResource("6_inpgq")
emission_shape = 3
emission_rect_extents = Vector2(512, 0)
direction = Vector2(0, 1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="PlayButton" type="TextureButton" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 192.0
offset_right = 256.0
offset_bottom = 256.0
grow_vertical = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_w2yms")
script = ExtResource("2_2rl5b")

[node name="LevelSelect" type="CanvasLayer" parent="PlayButton"]

[node name="ColorRect" type="ColorRect" parent="PlayButton/LevelSelect"]
offset_left = 320.0
offset_top = 64.0
offset_right = 1032.0
offset_bottom = 576.0
mouse_filter = 2
color = Color(0.227451, 0.282353, 0.321569, 1)

[node name="ChooseHere!" type="Label" parent="PlayButton/LevelSelect"]
offset_left = 328.0
offset_top = 152.0
offset_right = 462.0
offset_bottom = 175.0
rotation = -0.204944
text = "Choose difficulty!"
label_settings = SubResource("LabelSettings_a2a27")

[node name="Arrow" type="Sprite2D" parent="PlayButton/LevelSelect"]
position = Vector2(456, 168)
scale = Vector2(0.03, 0.03)
texture = ExtResource("6_xghxx")

[node name="LevelSelectLabel" type="Label" parent="PlayButton/LevelSelect"]
offset_left = 448.0
offset_top = 88.0
offset_right = 904.0
offset_bottom = 152.0
text = "LEVEL SELECT"
label_settings = SubResource("LabelSettings_5ccmj")
horizontal_alignment = 1

[node name="TutorialButton" parent="PlayButton/LevelSelect" instance=ExtResource("6_q0x1v")]
offset_left = 488.0
offset_top = 192.0
offset_right = 992.0
offset_bottom = 256.0
level_name = "Tutorial"
track = ExtResource("7_7vw0p")

[node name="LevelOneButton" parent="PlayButton/LevelSelect" instance=ExtResource("6_q0x1v")]
offset_left = 488.0
offset_top = 288.0
offset_right = 992.0
offset_bottom = 352.0
level_name = "Vergence"
track = ExtResource("7_8cgm1")
Level = 1

[node name="HowToPlay" type="TextureButton" parent="PlayButton/LevelSelect" groups=["how to"]]
offset_left = 832.0
offset_top = 88.0
offset_right = 1024.0
offset_bottom = 128.0
script = ExtResource("10_l0rwp")

[node name="ColorRect" type="ColorRect" parent="PlayButton/LevelSelect/HowToPlay"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(0.00784314, 0.0941176, 0.152941, 1)

[node name="Label" type="Label" parent="PlayButton/LevelSelect/HowToPlay"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 40.0
text = "How to play"
label_settings = SubResource("LabelSettings_a2a27")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="PlayButton/LevelSelect/HowToPlay"]
visible = false

[node name="ColorRect" type="ColorRect" parent="PlayButton/LevelSelect/HowToPlay/CanvasLayer"]
offset_left = 320.0
offset_top = 64.0
offset_right = 1032.0
offset_bottom = 576.0
color = Color(0.227451, 0.282353, 0.321569, 1)

[node name="How To Play" type="Label" parent="PlayButton/LevelSelect/HowToPlay/CanvasLayer"]
offset_left = 552.0
offset_top = 88.0
offset_right = 811.0
offset_bottom = 143.0
text = "HOW TO PLAY "
label_settings = ExtResource("11_fstwx")

[node name="Instructions" type="Control" parent="PlayButton/LevelSelect/HowToPlay/CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Movement" type="Label" parent="PlayButton/LevelSelect/HowToPlay/CanvasLayer/Instructions"]
layout_mode = 0
offset_left = 448.0
offset_top = 176.0
offset_right = 896.0
offset_bottom = 209.0
text = "W to move up, S to move down"
label_settings = ExtResource("12_mv2cu")
horizontal_alignment = 1

[node name="Clicking" type="Label" parent="PlayButton/LevelSelect/HowToPlay/CanvasLayer/Instructions"]
layout_mode = 0
offset_left = 448.0
offset_top = 232.0
offset_right = 896.0
offset_bottom = 301.0
text = "Left and right mouse click to hit notes (SPACE and ENTER work too)"
label_settings = ExtResource("12_mv2cu")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Clicking2" type="Label" parent="PlayButton/LevelSelect/HowToPlay/CanvasLayer/Instructions"]
layout_mode = 0
offset_left = 448.0
offset_top = 328.0
offset_right = 896.0
offset_bottom = 361.0
text = "Move into notes and click, move away from barriers"
label_settings = ExtResource("12_mv2cu")
horizontal_alignment = 1
autowrap_mode = 2

[node name="GoBack" type="TextureButton" parent="PlayButton/LevelSelect/HowToPlay/CanvasLayer"]
offset_left = 448.0
offset_top = 448.0
offset_right = 896.0
offset_bottom = 512.0
script = ExtResource("10_jysmn")

[node name="ColorRect" type="ColorRect" parent="PlayButton/LevelSelect/HowToPlay/CanvasLayer/GoBack"]
layout_mode = 0
offset_right = 448.0
offset_bottom = 64.0
mouse_filter = 2
color = Color(0.00784314, 0.0941176, 0.152941, 1)

[node name="Label" type="Label" parent="PlayButton/LevelSelect/HowToPlay/CanvasLayer/GoBack"]
layout_mode = 0
offset_right = 448.0
offset_bottom = 64.0
text = "Go back"
label_settings = SubResource("LabelSettings_a2a27")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayLabel" type="Label" parent="PlayButton"]
layout_mode = 0
offset_left = 128.0
offset_right = 256.0
offset_bottom = 64.0
text = "PLAY"
label_settings = SubResource("LabelSettings_8iohv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" type="TextureButton" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 256.0
offset_right = 256.0
offset_bottom = 320.0
grow_vertical = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_ws4vs")
script = ExtResource("3_8sauk")

[node name="OptionsMenu" type="CanvasLayer" parent="OptionsButton"]
visible = false

[node name="VolumeRect" type="ColorRect" parent="OptionsButton/OptionsMenu"]
offset_left = 296.0
offset_top = 40.0
offset_right = 680.0
offset_bottom = 312.0
color = Color(0.239216, 0.290196, 0.25098, 1)

[node name="VOLUME" type="Label" parent="OptionsButton/OptionsMenu/VolumeRect"]
layout_mode = 0
offset_left = 64.0
offset_top = 8.0
offset_right = 320.0
offset_bottom = 64.0
text = "Volume"
label_settings = ExtResource("11_fstwx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="OptionsButton/OptionsMenu/VolumeRect"]
layout_mode = 0
offset_left = 64.0
offset_top = 80.0
offset_right = 320.0
offset_bottom = 144.0
theme_override_icons/grabber = ExtResource("9_jn30u")
theme_override_icons/grabber_highlight = ExtResource("9_jn30u")
theme_override_icons/grabber_disabled = ExtResource("9_jn30u")
theme_override_styles/slider = SubResource("StyleBoxLine_cvktx")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_seexa")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_seexa")
max_value = 1.0
step = 0.1

[node name="VolumeLabel" type="Label" parent="OptionsButton/OptionsMenu/VolumeRect/VolumeSlider"]
layout_mode = 0
offset_left = 43.0
offset_right = 171.0
offset_bottom = 23.0
text = "Master Volume: "
label_settings = ExtResource("11_63nhc")
horizontal_alignment = 2

[node name="VolumeValue" type="Label" parent="OptionsButton/OptionsMenu/VolumeRect/VolumeSlider"]
layout_mode = 0
offset_left = 171.0
offset_right = 211.0
offset_bottom = 23.0
text = "50"
label_settings = ExtResource("11_63nhc")

[node name="MusicSlider" type="HSlider" parent="OptionsButton/OptionsMenu/VolumeRect"]
layout_mode = 0
offset_left = 64.0
offset_top = 144.0
offset_right = 320.0
offset_bottom = 208.0
theme_override_icons/grabber = ExtResource("9_jn30u")
theme_override_icons/grabber_highlight = ExtResource("9_jn30u")
theme_override_icons/grabber_disabled = ExtResource("9_jn30u")
theme_override_styles/slider = SubResource("StyleBoxLine_cvktx")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_seexa")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_seexa")
max_value = 1.0
step = 0.1

[node name="VolumeLabel" type="Label" parent="OptionsButton/OptionsMenu/VolumeRect/MusicSlider"]
layout_mode = 0
offset_left = 40.0
offset_right = 168.0
offset_bottom = 23.0
text = "Music Volume: "
label_settings = ExtResource("11_63nhc")
horizontal_alignment = 2

[node name="VolumeValue" type="Label" parent="OptionsButton/OptionsMenu/VolumeRect/MusicSlider"]
layout_mode = 0
offset_left = 168.0
offset_right = 208.0
offset_bottom = 23.0
text = "50"
label_settings = ExtResource("11_63nhc")

[node name="SFXSlider" type="HSlider" parent="OptionsButton/OptionsMenu/VolumeRect"]
layout_mode = 0
offset_left = 64.0
offset_top = 208.0
offset_right = 320.0
offset_bottom = 272.0
theme_override_icons/grabber = ExtResource("9_jn30u")
theme_override_icons/grabber_highlight = ExtResource("9_jn30u")
theme_override_icons/grabber_disabled = ExtResource("9_jn30u")
theme_override_styles/slider = SubResource("StyleBoxLine_cvktx")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_seexa")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_seexa")
max_value = 1.0
step = 0.1

[node name="VolumeLabel" type="Label" parent="OptionsButton/OptionsMenu/VolumeRect/SFXSlider"]
layout_mode = 0
offset_left = 32.0
offset_right = 160.0
offset_bottom = 23.0
text = "SFX Volume: "
label_settings = ExtResource("11_63nhc")
horizontal_alignment = 2

[node name="VolumeValue" type="Label" parent="OptionsButton/OptionsMenu/VolumeRect/SFXSlider"]
layout_mode = 0
offset_left = 160.0
offset_right = 200.0
offset_bottom = 23.0
text = "50"
label_settings = ExtResource("11_63nhc")

[node name="ScoreDisplayRect" type="ColorRect" parent="OptionsButton/OptionsMenu"]
offset_left = 704.0
offset_top = 40.0
offset_right = 1088.0
offset_bottom = 312.0
color = Color(0.239216, 0.290196, 0.25098, 1)

[node name="DISPLAY" type="Label" parent="OptionsButton/OptionsMenu/ScoreDisplayRect"]
layout_mode = 0
offset_left = 64.0
offset_top = 8.0
offset_right = 329.0
offset_bottom = 63.0
text = "Score Display"
label_settings = ExtResource("11_fstwx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShowScoreButton" parent="OptionsButton/OptionsMenu/ScoreDisplayRect" instance=ExtResource("14_j2f7x")]
layout_mode = 0
offset_left = 64.0
offset_top = 88.0
offset_right = 544.0
offset_bottom = 128.0
text = "Show Score"

[node name="ShowHitButton" parent="OptionsButton/OptionsMenu/ScoreDisplayRect" instance=ExtResource("14_j2f7x")]
layout_mode = 0
offset_left = 64.0
offset_top = 152.0
offset_right = 544.0
offset_bottom = 192.0
type = 1
text = "Show Total Hits"

[node name="ModifiersRect" type="ColorRect" parent="OptionsButton/OptionsMenu"]
offset_left = 296.0
offset_top = 336.0
offset_right = 680.0
offset_bottom = 608.0
color = Color(0.239216, 0.290196, 0.25098, 1)

[node name="MODIFIERS" type="Label" parent="OptionsButton/OptionsMenu/ModifiersRect"]
layout_mode = 0
offset_left = 64.0
offset_top = 8.0
offset_right = 329.0
offset_bottom = 63.0
text = "Modifiers"
label_settings = ExtResource("11_fstwx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthButton" parent="OptionsButton/OptionsMenu/ModifiersRect" instance=ExtResource("14_j2f7x")]
layout_mode = 0
offset_left = 64.0
offset_top = 88.0
offset_right = 544.0
offset_bottom = 128.0
type = 2
text = "Health"

[node name="CreditsButton" type="TextureButton" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 320.0
offset_right = 256.0
offset_bottom = 384.0
grow_vertical = 2
size_flags_horizontal = 4
texture_normal = ExtResource("9_occwv")
script = ExtResource("10_ihhec")

[node name="CreditsMenu" type="CanvasLayer" parent="CreditsButton"]
visible = false

[node name="ColorRect" type="ColorRect" parent="CreditsButton/CreditsMenu"]
offset_left = 320.0
offset_top = 64.0
offset_right = 1024.0
offset_bottom = 496.0
color = Color(0.333333, 0.262745, 0.341176, 1)

[node name="CreditsLabel" type="Label" parent="CreditsButton/CreditsMenu"]
offset_left = 448.0
offset_top = 84.0
offset_right = 896.0
offset_bottom = 148.0
text = "CREDITS"
label_settings = SubResource("LabelSettings_5ccmj")
horizontal_alignment = 1

[node name="Music" type="Control" parent="CreditsButton/CreditsMenu/CreditsLabel"]
anchors_preset = 0
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0

[node name="Genre" type="Label" parent="CreditsButton/CreditsMenu/CreditsLabel/Music"]
layout_mode = 0
offset_left = -64.0
offset_top = 64.0
offset_right = 64.0
offset_bottom = 128.0
text = "Music: "
label_settings = ExtResource("14_ebgxt")
vertical_alignment = 1

[node name="Person" type="Label" parent="CreditsButton/CreditsMenu/CreditsLabel/Music"]
layout_mode = 0
offset_left = 384.0
offset_top = 64.0
offset_right = 512.0
offset_bottom = 128.0
text = "Whimless"
label_settings = ExtResource("14_ebgxt")
horizontal_alignment = 2
vertical_alignment = 1

[node name="SFX" type="Control" parent="CreditsButton/CreditsMenu/CreditsLabel"]
anchors_preset = 0
offset_top = 44.0
offset_right = 40.0
offset_bottom = 84.0

[node name="Genre" type="Label" parent="CreditsButton/CreditsMenu/CreditsLabel/SFX"]
layout_mode = 0
offset_left = -64.0
offset_top = 72.0
offset_right = 64.0
offset_bottom = 136.0
text = "SFX:"
label_settings = ExtResource("14_ebgxt")
vertical_alignment = 1

[node name="Person" type="Label" parent="CreditsButton/CreditsMenu/CreditsLabel/SFX"]
layout_mode = 0
offset_left = 384.0
offset_top = 72.0
offset_right = 512.0
offset_bottom = 136.0
text = "Whimless"
label_settings = ExtResource("14_ebgxt")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Charting" type="Control" parent="CreditsButton/CreditsMenu/CreditsLabel"]
anchors_preset = 0
offset_top = 108.0
offset_right = 40.0
offset_bottom = 148.0

[node name="Genre" type="Label" parent="CreditsButton/CreditsMenu/CreditsLabel/Charting"]
layout_mode = 0
offset_left = -64.0
offset_top = 80.0
offset_right = 64.0
offset_bottom = 144.0
text = "Charting:"
label_settings = ExtResource("14_ebgxt")
vertical_alignment = 1

[node name="Person" type="Label" parent="CreditsButton/CreditsMenu/CreditsLabel/Charting"]
layout_mode = 0
offset_left = 284.0
offset_top = 76.0
offset_right = 512.0
offset_bottom = 140.0
text = "Whimless & Autumn"
label_settings = ExtResource("14_ebgxt")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Programming" type="Control" parent="CreditsButton/CreditsMenu/CreditsLabel"]
anchors_preset = 0
offset_top = 172.0
offset_right = 40.0
offset_bottom = 212.0

[node name="Genre" type="Label" parent="CreditsButton/CreditsMenu/CreditsLabel/Programming"]
layout_mode = 0
offset_left = -64.0
offset_top = 80.0
offset_right = 92.0
offset_bottom = 144.0
text = "Programming:"
label_settings = ExtResource("14_ebgxt")
vertical_alignment = 1

[node name="Person" type="Label" parent="CreditsButton/CreditsMenu/CreditsLabel/Programming"]
layout_mode = 0
offset_left = 384.0
offset_top = 80.0
offset_right = 512.0
offset_bottom = 144.0
text = "Autumn"
label_settings = ExtResource("14_ebgxt")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Art" type="Control" parent="CreditsButton/CreditsMenu/CreditsLabel"]
anchors_preset = 0
offset_top = 236.0
offset_right = 40.0
offset_bottom = 276.0

[node name="Genre" type="Label" parent="CreditsButton/CreditsMenu/CreditsLabel/Art"]
layout_mode = 0
offset_left = -64.0
offset_top = 80.0
offset_right = 64.0
offset_bottom = 144.0
text = "Art: "
label_settings = ExtResource("14_ebgxt")
vertical_alignment = 1

[node name="Person" type="Label" parent="CreditsButton/CreditsMenu/CreditsLabel/Art"]
layout_mode = 0
offset_left = 384.0
offset_top = 80.0
offset_right = 512.0
offset_bottom = 144.0
text = "Autumn"
label_settings = ExtResource("14_ebgxt")
horizontal_alignment = 2
vertical_alignment = 1

[node name="QuitButton" type="TextureButton" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 384.0
offset_right = 256.0
offset_bottom = 448.0
grow_vertical = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_w2yms")
script = ExtResource("4_xjse2")

[node name="QuitLabel" type="Label" parent="QuitButton"]
layout_mode = 0
offset_left = 128.0
offset_right = 256.0
offset_bottom = 64.0
text = "QUIT"
label_settings = SubResource("LabelSettings_8iohv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXPlayer" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_g5fc3")
autoplay = true
bus = &"MainMenu"
script = ExtResource("17_yf7x2")

[node name="Logo" parent="." instance=ExtResource("21_qrt8e")]
position = Vector2(648, 312)
scale = Vector2(0.75, 0.75)

[connection signal="status_changed_for_menu" from="." to="PlayButton" method="_on_status_changed_for_menu"]
[connection signal="status_changed_for_menu" from="." to="OptionsButton" method="_on_status_changed_for_menu"]
[connection signal="status_changed_for_menu" from="." to="CreditsButton" method="_on_status_changed_for_menu"]
[connection signal="mouse_entered" from="PlayButton" to="PlayButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="PlayButton" method="_on_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="PlayButton" method="_on_pressed"]
[connection signal="visibility_changed" from="PlayButton/LevelSelect" to="PlayButton" method="_on_level_select_visibility_changed"]
[connection signal="mouse_entered" from="PlayButton/LevelSelect/TutorialButton" to="PlayButton/LevelSelect/TutorialButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton/LevelSelect/TutorialButton" to="PlayButton/LevelSelect/TutorialButton" method="_on_mouse_exited"]
[connection signal="pressed" from="PlayButton/LevelSelect/TutorialButton" to="PlayButton/LevelSelect/TutorialButton" method="_on_pressed"]
[connection signal="mouse_entered" from="PlayButton/LevelSelect/LevelOneButton" to="PlayButton/LevelSelect/LevelOneButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton/LevelSelect/LevelOneButton" to="PlayButton/LevelSelect/LevelOneButton" method="_on_mouse_exited"]
[connection signal="pressed" from="PlayButton/LevelSelect/LevelOneButton" to="PlayButton/LevelSelect/LevelOneButton" method="_on_pressed"]
[connection signal="mouse_entered" from="PlayButton/LevelSelect/HowToPlay" to="PlayButton/LevelSelect/HowToPlay" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton/LevelSelect/HowToPlay" to="PlayButton/LevelSelect/HowToPlay" method="_on_mouse_exited"]
[connection signal="pressed" from="PlayButton/LevelSelect/HowToPlay" to="PlayButton/LevelSelect/HowToPlay" method="_on_pressed"]
[connection signal="pressed" from="PlayButton/LevelSelect/HowToPlay/CanvasLayer/GoBack" to="PlayButton/LevelSelect/HowToPlay/CanvasLayer/GoBack" method="_on_pressed"]
[connection signal="mouse_entered" from="OptionsButton" to="OptionsButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="OptionsButton" to="OptionsButton" method="_on_mouse_exited"]
[connection signal="pressed" from="OptionsButton" to="OptionsButton" method="_on_pressed"]
[connection signal="visibility_changed" from="OptionsButton/OptionsMenu" to="OptionsButton" method="_on_options_menu_visibility_changed"]
[connection signal="value_changed" from="OptionsButton/OptionsMenu/VolumeRect/VolumeSlider" to="OptionsButton" method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="OptionsButton/OptionsMenu/VolumeRect/MusicSlider" to="OptionsButton" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="OptionsButton/OptionsMenu/VolumeRect/SFXSlider" to="OptionsButton" method="_on_sfx_slider_value_changed"]
[connection signal="mouse_entered" from="CreditsButton" to="CreditsButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CreditsButton" to="CreditsButton" method="_on_mouse_exited"]
[connection signal="pressed" from="CreditsButton" to="CreditsButton" method="_on_pressed"]
[connection signal="visibility_changed" from="CreditsButton/CreditsMenu" to="CreditsButton" method="_on_options_menu_visibility_changed"]
[connection signal="mouse_entered" from="QuitButton" to="QuitButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="QuitButton" to="QuitButton" method="_on_mouse_exited"]
[connection signal="pressed" from="QuitButton" to="." method="exit"]
[connection signal="finished" from="MusicPlayer" to="MusicPlayer" method="_on_finished"]
